--- a/Libs/uix/kv/junkfikes.kv
+++ b/Libs/uix/kv/junkfikes.kv
@@ -77,6 +77,7 @@
                 pos: self.pos
                 size: self.size
         Button:
+            id: buttonstop_ID
             text: "[color=#000000]STOP"
             font_size: "19sp"
             bold: True
