--- a/Libs/uix/kv/startscreen.kv
+++ b/Libs/uix/kv/startscreen.kv
@@ -28,7 +28,7 @@
 
             # Тело STORAGE/RAM
             FloatLayout:
-                id: body_progress_clean
+                id: progress_calc_storage_ram
                 canvas:
                     Color:
                         rgb:
