--- a/Libs/uix/kv/junkfikes.kv
+++ b/Libs/uix/kv/junkfikes.kv
@@ -18,11 +18,11 @@
             pos_hint: {"center_x": .5, "center_y": .75}
             size_hint: .7, 1
             Image:
-                id: numeral_one
+                id: storage_numeral_one
                 size_hint: .52, .52
                 source: "Data/Images/6.png"
             Image:
-                id: numeral_two
+                id: storage_numeral_two
                 size_hint: .52, .52
                 source: "Data/Images/5.png"
             Image:
