--- a/Libs/uix/kv/junkfikes.kv
+++ b/Libs/uix/kv/junkfikes.kv
@@ -80,6 +80,7 @@
             text: "STOP"
             font_size: "19sp"
             bold: True
+            markup: True
             background_normal: "Data/Images/stop_progress.png"
             background_down: "Data/Images/stop_progress_down.png"
             color: 0.1, 0.1, 0.1, 1
