--- a/Libs/uix/kv/about.kv
+++ b/Libs/uix/kv/about.kv
@@ -43,7 +43,7 @@
             Label:
                 text: root.text_license
                 text_size: self.size
-                font_size: "10pt"
+                font_size: dp(12)
                 valign: "top"
                 size_hint_y: None
                 height: root.height / 2.5
