--- a/Libs/uix/kv/startscreen.kv
+++ b/Libs/uix/kv/startscreen.kv
@@ -21,8 +21,10 @@
             ActionOverflow:
                 id: action_overflow
                 overflow_image: "Data/Images/overflow_image.png"
+    # Менеджер экранов.
     ScreenManager:
         id: screen_manager
+        # Текущий стартовый экран.
         Screen:
             id: screen
 
