--- a/Libs/uix/kv/startscreen.kv
+++ b/Libs/uix/kv/startscreen.kv
@@ -142,11 +142,9 @@
                             rgb: 0, 0, 0
                         Line:
                             points:
-                                [0, self.size[1] / 1.9, self.size[0], \
-                                self.size[1] / 1.9]
+                                [0, self.size[1] / 1.9, self.size[0], self.size[1] / 1.9]
                             width: 1
                         Line:
                             points:
-                                [self.size[0] / 2, 0, self.size[0] / 2, \
-                                self.size[1] / 1.001]
+                                [self.size[0] / 2, 0, self.size[0] / 2, self.size[1] / 1.001]
                             width: 1
